# fsdr-blocks

./: Cargo.toml
benches/channel/: crossbeam_sink.rs  crossbeam_source.rs
benches/cw/: baseband_to_cw.rs  cw_to_char.rs  shared.rs
crates/sigmf/: Cargo.toml
crates/sigmf-utilities/: Cargo.toml
crates/sigmf-utilities/src/: sigmf_col.rs  sigmf_convert.rs  sigmf_hash.rs
crates/sigmf/src/: capture.rs  dataset_format.rs  description.rs  global.rs
examples/agc/: Cargo.toml
examples/agc/src/: main.rs
src/: agc.rs  lib.rs  stdinout.rs  type_converters.rs
src/async_channel/: async_channel_sink.rs  async_channel_source.rs
src/channel/: crossbeam_sink.rs  crossbeam_source.rs
src/cw/: baseband_to_cw.rs  cw_to_char.rs  shared.rs
src/math/: freq_shift.rs
src/serde_pmt/: deserialiser.rs  mod.rs  serialiser.rs
src/sigmf/: sigmf_sink.rs  sigmf_source.rs
src/stream/: deinterleave.rs
tests/: type_converters.rs
tests/async_channel/: async_channel_sink.rs  async_channel_source.rs
tests/channel/: crossbeam_sink.rs  crossbeam_source.rs
tests/cw/: baseband_to_cw.rs  cw_to_char.rs  shared.rs
tests/math/: freq_shift.rs
tests/sigmf/: sigmf_graph.rs  sigmf_source.rs
tests/stream/: deinterleave.rs
